--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,40 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/background">
 
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageViewPresent"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginTop="400dp"
-        app:srcCompat="@drawable/po8d3" />
+        app:srcCompat="@drawable/pod"
+        tools:ignore="MissingConstraints" />
+
+    <View
+        android:id="@+id/viewShadow"
+        android:layout_width="match_parent"
+        android:layout_height="9dp"
+        android:layout_marginBottom="70dp"
+        android:layout_gravity="bottom"
+        android:background="@drawable/toolbar_dropshadow"
+        app:layout_constraintBottom_toTopOf="@+id/buttonPanel" />
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/ff"
-        android:layout_width="200dp"
+        android:id="@+id/cardViewButton"
+        android:layout_width="270dp"
         android:layout_height="80dp"
-        android:layout_gravity="center_vertical|center_horizontal"
-        app:cardCornerRadius="80dp">
+        android:layout_gravity="center_horizontal|center_vertical"
+        app:cardCornerRadius="45dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <Button
-            android:id="@+id/button2"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/start" />
+            android:id="@+id/buttonStart"
+            android:layout_width="270dp"
+            android:layout_height="80dp"
+            android:background="@drawable/maxresdefault"
+            android:fontFamily="@font/font"
+            android:gravity="top|center_horizontal"
+            android:text="@string/start"
+            android:textColor="#F8F8F8"
+            android:textSize="52sp" />
+
     </androidx.cardview.widget.CardView>
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="100dp"
 
-        android:layout_height="100dp"
-        android:layout_gravity="bottom|center_horizontal"
-        android:text="0"
-        android:textSize="30sp" />
+    <androidx.cardview.widget.CardView
+        android:id="@+id/buttonPanel"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_gravity="bottom"
+        app:cardBackgroundColor="#14ffffff"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <View
+            android:id="@+id/view"
+            android:layout_width="match_parent"
+            android:layout_height="9dp"
+            android:background="@drawable/toolbar_dropshadow"
+            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@drawable/maxresdefault"
+            android:contentDescription="@string/background" />
+
+        <TextView
+            android:id="@+id/textViewGlasses"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="bottom|center_horizontal"
+            android:fontFamily="@font/font"
+            android:gravity="top|center_horizontal"
+            android:textColor="#F8F8F8"
+            android:textSize="50sp"
+            tools:text="0" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:layout_marginStart="15dp"
+            android:layout_marginLeft="15dp"
+            android:fontFamily="@font/font"
+            android:text="@string/score"
+            android:textColor="#F8F8F8"
+            android:textSize="50sp" />
+
+        <ImageButton
+            android:id="@+id/imageButtonReturn"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:layout_gravity="end|bottom"
+            android:layout_marginEnd="15dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="5dp"
+            android:background="@drawable/ic_baseline_replay_24"
+            android:contentDescription="@string/play_return" />
+
+    </androidx.cardview.widget.CardView>
 
 
 </FrameLayout>
