--- a/app/src/main/res/drawable/toolbar_dropshadow.xml
+++ b/app/src/main/res/drawable/toolbar_dropshadow.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
 
     <gradient android:startColor="@android:color/transparent"
-        android:endColor="#980000"
+        android:endColor="#8E3A3A"
         android:type="linear"
         android:angle="-90"/>
 
