--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light">
-        <item name="colorPrimary">#03ccd3</item>
-        <item name="colorPrimaryDark">#0e0e1b</item>
+        <item name="colorPrimary">#D6EEF8</item>
+        <item name="colorPrimaryDark">#aadbf0</item>
         <item name="colorAccent">#03ccd3</item>
     </style>
 </resources>
